# agent-key

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.sqlx/: query-287d4833dd924421848a98632d7147fbd2ce86f98c5d8ed50b41fd692d52b187.json  query-3c7d4eee63b0c9ea235fbdb9e137b9974b4de2373dff52ca5b7482d517deab26.json  query-5962efdde74c4001209ba61487ac1912542cad1f65c3af1ac837e311329dd799.json  query-64d2fc665885ae1ef97bcf3ee0a53cd9d818e5fdf02e2b07e026c0610b8798e0.json  query-a8aab517e2d2f10d857068ce5d385f40079c3a6791d6ed4bd074518762cdcaa8.json  query-c4b3b682334e1e32dd6b853052539c2045049fc101fe7cf3b38cd5f17787f206.json  query-e86b21786b37a587b83fba1f3a86f9f5757ee576fa0ea27e5afb350d57d64c86.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/agents/: AgentForm.tsx  AgentTable.tsx  AgentsList.tsx
frontend/src/components/api-keys/: ApiKeyForm.tsx  ApiKeyList.tsx
frontend/src/components/auth/: AuthLayout.tsx  LoginForm.tsx  ResetPasswordForm.tsx  SignupForm.tsx
frontend/src/components/common/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Modal.tsx  Select.tsx  Spinner.tsx  Table.tsx  Toast.tsx  (+1 more)
frontend/src/hooks/: useAgents.ts  useApiKeys.ts  useAuth.ts  useCredentials.ts  useLocalStorage.ts
frontend/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  AuditLogPage.tsx  AuthPage.tsx  CredentialDetailPage.tsx  CredentialsPage.tsx  DashboardPage.tsx  SettingsPage.tsx
frontend/src/services/: agentService.ts  api.ts  apiKeyService.ts  auditService.ts  authService.ts  credentialService.ts  credentialTypeService.ts  dashboardService.ts  userService.ts
frontend/src/store/: agentStore.ts  apiKeyStore.ts  authStore.ts  credentialStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/tests/: agentService.test.ts  authService.test.ts  credentialService.test.ts  setup.ts
frontend/tests/components/: LoginForm.test.tsx  SignupForm.test.tsx
frontend/tests/hooks/: useDebounce.test.ts  useLocalStorage.test.ts
frontend/tests/services/: agentService.test.ts
migrations/: 20241224000001_init_schema.down.sql  20241224000001_init_schema.up.sql  20241224000002_create_agent_tables.down.sql  20241224000002_create_agent_tables.up.sql  20241224000003_create_credential_tables.up.sql  20241225000001_add_team_id_to_credentials.down.sql  20241225000001_add_team_id_to_credentials.up.sql  20241225000004_create_ephemeral_token_tables.down.sql  20241225000004_create_ephemeral_token_tables.up.sql  20241225_add_api_keys.sql  20241226000001_add_credential_types.up.sql  20241226_add_user_name.sql
scripts/: verify.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agentkey/: __init__.py  _utils.py  _version.py  client.py  exceptions.py
sdk/python/tests/: conftest.py  test_client.py  test_results.txt
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  server.rs
src/handlers/: agents.rs  api_keys.rs  audit.rs  auth.rs  credential_types.rs  credentials.rs  health.rs  mod.rs  stats.rs  tokens.rs  users.rs
src/middleware/: api_key.rs  auth.rs  ephemeral_token.rs  mod.rs
src/services/: agent.rs  auth.rs  credential.rs  encryption.rs  ephemeral_token.rs  jwt.rs  mod.rs  password.rs  quota.rs  stats.rs
src/utils/: aad.rs  api_key.rs  mod.rs
tests/: agent_tests.rs  auth_tests.rs  credential_tests.rs  encryption_tests.rs  ephemeral_token_tests.rs  health_tests.rs  jwt_tests.rs
(+11 files in other folders)
